updated nav and footer links and updated token section with new text

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -225,14 +225,14 @@
 
             <!-- Heading -->
             <h2>
-              Invest in the future of AI
+              Join the future of AI
               <br>
-              <span class="text-primary">with Cyborg.AI token</span>.
+              <span class="text-primary">with $BORG token</span>.
             </h2>
 
             <!-- Text -->
             <p class="fs-lg text-muted mb-6">
-              Be a part of the AI revolution and invest in our crypto token, which functions like a stock for our company.
+              Be a part of the AI revolution: Buy and earn BORG, the token that powers the Cyborg.AI ecosystem.
             </p>
 
             <!-- List -->
@@ -240,19 +240,19 @@
 
               <!-- Icon -->
               <div class="icon text-primary">
-                {{> media/repeat}}
+                {{> general/thunder}}
               </div>
 
               <div class="ms-5">
 
                 <!-- Heading -->
                 <h4 class="mb-1">
-                  Token Feature One
+                  Real Utility
                 </h4>
 
                 <!-- Text -->
                 <p class="text-muted mb-6">
-                  Sentence here about the first token feature. Make sure to fill this in later.
+                  $BORG is the energy that fuels Cybot and is an integral part of our expanding AI ecosystem.
                 </p>
 
               </div>
@@ -262,19 +262,19 @@
 
               <!-- Icon -->
               <div class="icon text-primary">
-                {{> code/code}}
+                {{> shopping/dollar}}
               </div>
 
               <div class="ms-5">
 
                 <!-- Heading -->
                 <h4 class="mb-1">
-                  Token Feature Two
+                  Massive Rewards
                 </h4>
 
                 <!-- Text -->
                 <p class="text-muted mb-6 mb-md-0">
-                  Sentence here about the second token feature. Make sure to fill this in later.
+                  $BORG is the heart of our incentive program that gives back to the community fairly and transparently.
                 </p>
 
               </div>
