--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,7 @@
           <div class="col-12 col-md-5 col-lg-6 order-md-2">
 
             <!-- Image -->
-            <img src="assets/img/cybot-1.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img//cybot/cybot-holding-phone.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
 
           </div>
           <div class="col-12 col-md-7 col-lg-6 order-md-1" data-aos="fade-up">
@@ -214,7 +214,7 @@
           <div class="col-12 col-md-6 col-lg-5 order-md-1" data-aos="fade-right">
 
             <!-- Image -->
-            <img src="assets/img/cybot-2.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img/cybot/cybot-iphone.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
 
           </div>
         </div> <!-- / .row -->
@@ -356,7 +356,7 @@
 
                 <!-- Text -->
                 <p class="text-gray-700 mb-6">
-                  It takes a few minutes to add your information and home's photos.
+                  Hold at least 1 NFT in your wallet and unlock lifetime access to Cyborg.AI tools.
                 </p>
 
               </div>
@@ -379,7 +379,7 @@
 
                 <!-- Text -->
                 <p class="text-gray-700 mb-6">
-                  Let us know where your homes are located and when they're available.
+                  Skip monthly recurring payments – purchase once and be good forever.
                 </p>
 
               </div>
@@ -402,7 +402,7 @@
 
                 <!-- Text -->
                 <p class="text-gray-700 mb-0">
-                  Get ready for an influx of guests and easy passive income.
+                  Want to sell your NFT? The lifetime access will transfer to the new owner.
                 </p>
 
               </div>
