fixed navbar color issue, updated copy on site

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,7 +33,7 @@
 
             <!-- Text -->
             <p class="lead text-center text-md-start text-muted mb-6 mb-lg-8">
-              With Cybot, interacting with AI is only two taps away. DM our Telegram bot to get started.
+              With Cybot, interacting with AI is only two taps away. Join our Telegram group to gain access to the bot.
             </p>
 
             <!-- Buttons -->
@@ -204,7 +204,7 @@
               <!-- Button -->
               <div class="text-center text-md-start mt-6">
                 <a href="https://t.me/+NpEcXYNovApmNmZh" class="btn btn-primary shadow lift me-1">
-                  DM Cybot on Telegram <i class="fe fe-arrow-right d-none d-md-inline ms-3"></i>
+                  Get Started on Telegram <i class="fe fe-arrow-right d-none d-md-inline ms-3"></i>
                 </a>
               </div>
 
@@ -520,7 +520,7 @@
 
                 <!-- Text -->
                 <p class="text-muted mb-6 mb-md-8">
-                  Join our community <a href="https://t.me/+NpEcXYNovApmNmZh">here</a> and then follow the instructions in the pinned message to DM Cybot.
+                  Join our community <a href="https://t.me/+NpEcXYNovApmNmZh">here</a> and participate to gain access to Cybot.
                 </p>
 
               </div>
@@ -547,7 +547,7 @@
 
                 <!-- Text -->
                 <p class="text-muted mb-6 mb-md-8">
-                  Stay tuned to our community and social media channels. We'll be launching sometime in 2023.
+                  Stay tuned to our community and social media channels. We'll be launching in Q4 2023.
                 </p>
 
               </div>
@@ -579,7 +579,7 @@
 
             <!-- Text -->
             <p class="fs-lg text-muted mb-6 mb-md-8">
-              Click Get Started below to DM Cybot and leverage the power of AI no matter where you are.
+              Click Get Started below to join our Telegram and leverage the power of AI no matter where you are.
             </p>
 
             <!-- Button -->
